[package]
edition = "2021"
name = "healthcheck"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {version = "1", features = ["backtrace"]}
axum = "0.5"
fehler = "1"
futures = "0.3"
once_cell = "1.10"
prometheus = "0.13"
serde_json = "1"
tokio = {version = "1", features = ["full"]}
